<resources>
    <string name="app_name">PTBTB</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="search">search</string>
    <string name="khairin">\@khairin</string>
    <string name="nama">Nama</string>
    <string name="address">address</string>
    <string name="password">password</string>
    <string name="confirmpassword">confirmpassword</string>
    <string name="save">Save</string>
    <string name="khairinn">Khairin</string>
    <string name="namaa">Name</string>
    <string name="kaktus">kaktus</string>
    <string name="lidah_mertua">Lidah Mertua</string>
    <string name="janda_bolong">janda bolong</string>
    <string name="lidah_buaya">Lidah Buaya</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="profile1">Profile</string>
    <string name="article">Article</string>
    <string name="community">Community</string>
    <string name="barter">Barter</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="don_t_have_an_account_sign_up_here">Don’t have an account? Sign up here</string>
    <string name="join">join</string>
    <string name="textview">TextView</string>
    <string name="button">button</string>
    <string name="rating">RATING</string>
    <string name="rating_bplant_app">Rating Bplant App</string>
    <string name="new_post">New Post</string>
    <string name="upload">UPLOAD</string>
    <string name="file_uploud">File Uploud</string>
    <string name="detail">Detail</string>
    <string name="title_postingan">Title Postingan</string>
    <string name="request_barter">Request Barter</string>
    <string name="detail_postingan">Detail Postingan</string>
    <string name="title">Title</string>
    <string name="input_title_postingan">Title Postingan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="type_a_message">Type a message</string>
    <string name="nama_komunitas">Nama Komunitas</string>
    <string name="ihistory">History</string>
    <string name="idetail">Detail</string>
    <string name="username">username</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="email_username">Email/Username</string>
    <string name="telp">telp</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="password_saat_ini">Password Saat Ini</string>
    <string name="password_baru">Password Baru</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="pasword_huruf"><![CDATA[Kata sandi anda harus lebih dari enam karakter dan berisi kombinasi angka, huruf, dan karakter khusus (!#@%&)]]></string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>