<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newpost">

    <TextView
        android:id="@+id/newpost"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/new_post"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="12dp"
            android:background="@drawable/edittext_bg"
            android:inputType="text"
            android:hint ="@string/input_title_postingan"
            />
        <TextView
            android:id="@+id/textViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/editTextTextDetail"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="12dp"
            android:background="@drawable/edittext_bg"
            android:inputType="text"
            android:hint ="@string/detail_postingan"
            />
        <TextView
            android:id="@+id/textViewBarter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Barter"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextBarter"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="12dp"
            android:background="@drawable/edittext_bg"
            android:inputType="text"
            android:hint ="@string/request_barter"
            />
        <TextView
            android:id="@+id/textViewFU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_uploud"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="12dp"
            android:background="@drawable/edittext_bg"
            android:inputType="text"
            android:hint ="@string/title_postingan"
            />

        <Button
            android:id="@+id/button_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#9E326C"
            android:layout_marginTop="20dp"
            android:text="@string/upload" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

