<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDE0DA"
    tools:context=".Regist">

    <TextView
        android:id="@+id/signup"
        android:layout_width="159dp"
        android:layout_height="67dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="191dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_up"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernamenya">

        <EditText
            android:id="@+id/EditName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_btn_background"
            android:ems="10"
            android:hint="@string/namaa"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_btn_background"
            android:ems="10"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_btn_background"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_btn_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/confirmPassword4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_btn_background"
            android:ems="10"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:padding="10dp" />


    </LinearLayout>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="144dp"
        android:layout_height="52dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="95dp"
        android:backgroundTint="#9E326C"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>