<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDE0DA"
    tools:context=".edit_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="101dp"
                    android:layout_height="101dp"
                    android:src="@drawable/profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nama_user" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="330dp"
                    android:src="@drawable/back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nama_user"
                    android:layout_width="79dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/khairinn"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/usernamenya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khairin"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView8"
                    app:layout_constraintHorizontal_bias="0.487"
                    app:layout_constraintStart_toStartOf="@+id/imageView8"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8"
                    app:layout_constraintVertical_bias="0.05" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usernamenya">

                    <EditText
                        android:id="@+id/EditName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/white_btn_background"
                        android:ems="10"
                        android:hint="@string/namaa"
                        android:inputType="text"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/white_btn_background"
                        android:ems="10"
                        android:hint="@string/email"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/Address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/white_btn_background"
                        android:ems="10"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/editTextTextPassword3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/white_btn_background"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/confirmPassword4"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/white_btn_background"
                        android:ems="10"
                        android:hint="@string/confirmpassword"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                    <Button
                        android:id="@+id/save_edit"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="#9E326C"
                        android:text="@string/save" />


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
