<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogForgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogBox1"
        android:layout_width="330dp"
        android:layout_height="435dp"
        android:background="@drawable/white_box"
        android:backgroundTint="#FDE0DA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="276dp"
            android:layout_height="52dp"
            android:layout_marginTop="7dp"
            android:text="@string/pasword_huruf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotTitle" />

        <TextView
            android:id="@+id/forgotTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#063A38"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="Ubah Password"
            android:textAlignment="center"
            android:textColor="#063A38"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/passwordBaru"
            android:layout_width="277dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/search_background"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password_baru"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordIni" />

        <EditText
            android:id="@+id/passwordIni"
            android:layout_width="277dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_background"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password_saat_ini"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/passwordBaru2"
            android:layout_width="277dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_background"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/konfirmasi_password"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordBaru" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="277dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#9E326C"
            android:text="@string/ubah_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordBaru2"
            app:layout_constraintVertical_bias="0.44" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
